<resources>
    <string name="app_name">EcoRodoviasApp</string>
    <string name="logo_ecovias">logo ecovias</string>
    <string name="screen_top">screen top</string>
    <string name="title_ecovias">EcoVIAS</string>
    <string name="new_user_message">Esse é o seu primeiro acesso. Por favor, cadastre o seu nome e placa do carro.</string>
    <string name="full_name">Nome completo</string>
    <string name="save">Salvar</string>
    <string name="new_incident">Registrar incidente</string>
    <string name="chose_option">Escolha uma das opções abaixo:</string>
    <string name="new_route">Nova rota</string>
    <string name="see_incidents">Visualizar incidentes</string>
    <string name="new_incident_header">Novo Incidente</string>
    <string name="incident_title">Assunto</string>
    <string name="incident_description">Descrição</string>
    <string name="start_tracking">Iniciar Rastreio</string>
    <string name="stop_tracking">Parar Rastreio</string>
    <string name="car_plate">Placa</string>
</resources>
