<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity">

    <ImageView
        android:id="@+id/userScreenTop"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:contentDescription="@string/screen_top"
        android:background="@color/bg_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_ecovias"
        android:textColor="@color/title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/userScreenTop"
        app:layout_constraintStart_toStartOf="@id/userScreenTop"
        app:layout_constraintEnd_toEndOf="@id/userScreenTop"
        app:layout_constraintBottom_toBottomOf="@id/userScreenTop"/>

    <TextView
        android:id="@+id/userMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/new_user_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/userScreenTop"
        app:layout_constraintStart_toStartOf="@id/userScreenTop"
        app:layout_constraintEnd_toEndOf="@id/userScreenTop" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintTop_toBottomOf="@id/userMessage"
        app:layout_constraintStart_toStartOf="@id/userMessage"
        app:layout_constraintEnd_toEndOf="@id/userMessage" />

    <EditText
        android:id="@+id/userCarPlateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/car_plate"
        android:inputType="textCapCharacters|number"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        app:layout_constraintStart_toStartOf="@id/userNameEditText"
        app:layout_constraintEnd_toEndOf="@id/userNameEditText" />

    <Button
        android:id="@+id/userSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/save"
        android:textColor="@color/button_border"
        app:layout_constraintTop_toBottomOf="@id/userCarPlateEditText"
        app:layout_constraintStart_toStartOf="@id/userCarPlateEditText"
        app:layout_constraintEnd_toEndOf="@id/userCarPlateEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>