<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewIncidentActivity">

    <ImageView
        android:id="@+id/incidentScreenTop"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:contentDescription="@string/screen_top"
        android:background="@color/bg_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/incidentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_ecovias"
        android:textColor="@color/title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/incidentScreenTop"
        app:layout_constraintStart_toStartOf="@id/incidentScreenTop"
        app:layout_constraintEnd_toEndOf="@id/incidentScreenTop"
        app:layout_constraintBottom_toBottomOf="@id/incidentScreenTop"/>

    <TextView
        android:id="@+id/incidentHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:text="@string/new_incident_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/incidentScreenTop"
        app:layout_constraintStart_toStartOf="@id/incidentScreenTop"
        app:layout_constraintEnd_toEndOf="@id/incidentScreenTop" />

    <EditText
        android:id="@+id/incidentTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/incident_title"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintTop_toBottomOf="@id/incidentHeader"
        app:layout_constraintStart_toStartOf="@id/incidentHeader"
        app:layout_constraintEnd_toEndOf="@id/incidentHeader" />

    <EditText
        android:id="@+id/incidentDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/incident_description"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toBottomOf="@id/incidentTitleEditText"
        app:layout_constraintStart_toStartOf="@id/incidentTitleEditText"
        app:layout_constraintEnd_toEndOf="@id/incidentTitleEditText" />

    <Button
        android:id="@+id/incidentSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/save"
        android:textColor="@color/button_border"
        app:layout_constraintTop_toBottomOf="@id/incidentDescriptionEditText"
        app:layout_constraintStart_toStartOf="@id/incidentDescriptionEditText"
        app:layout_constraintEnd_toEndOf="@id/incidentDescriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>